tests/codegen/fail/unsupported_dynamic_task_array_index_assignment_build.stderr
error: tests/codegen/fail/unsupported_dynamic_task_array_index_assignment_build.ql:11:5: assignment through task-handle array indexing currently requires an integer literal index
      tasks[index] = worker()
      ^^^^^^^^ assignment target here
